--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,11 @@
+@font-face {
+  font-family: 'MyFont';
+  src: url('./LigalexMono.ttf') format('ttf');
+  font-weight: 600;
+  font-style: normal;
+}
 .hello {
   color: red;
-  background: url("./icon.png")
+  font-family: 'MyFont';
+  background: url('./icon.png');
 }
